--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=6006 react-scripts start",
+    "start": "REACT_APP_ENV=dev PORT=6006 react-scripts start",
+    "start:prod": "REACT_APP_ENV=prod PORT=6006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
